<resources>
    <!--<string name="app_name">RamiAlastora</string>
    <string name="menu_main">Main</string>
    <string name="menu_notification">Notifications</string>
    <string name="menu_favotire">Favorites</string>
    <string name="menu_scorer">Scorers</string>
    <string name="menu_league">Leagues</string>
    <string name="menu_latest_news">Latest News</string>
    <string name="news">الأخبار</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_facebook">Facebook</string>
    <string name="menu_twitter">Twitter</string>
    <string name="socialmedia">Social Media</string>
    <string name="logout">Logout</string>-->
    <string name="app_name">رامي الأسطورة</string>
    <string name="menu_main">الرئيسية</string>
    <string name="menu_notification">الإشعارات</string>
    <string name="menu_favotire">المفضلة</string>
    <string name="menu_scorer">الهدافون</string>
    <string name="menu_league">البطولات</string>
    <string name="menu_latest_news">آخر الأخبار</string>
    <string name="news">الأخبار</string>
    <string name="menu_settings">الإعدادات</string>
    <string name="menu_facebook">فيسبوك</string>
    <string name="menu_twitter">تويتر</string>
    <string name="socialmedia">التواصل الاجتماعي</string>
    <string name="logout">خروج</string>
    <string name="drawer_open">drawer_open</string>
    <string name="drawer_close">drawer_close</string>
    <string name="yellow">yellow</string>
    <string name="red">red</string>
    <string name="search">البحث</string>
    <string name="sortdate">فرز حسب التاريخ</string>
    <string name="todaymatches">مباريات اليوم</string>
    <string name="tomorrowmatches">مباريات الغد</string>
    <string name="yesterdaymatches">مباريات الأمس</string>
    <string name="underway">جارية الآن</string>
    <string name="comming">قادمة</string>
    <string name="ended">إنتهت</string>
    <string name="live">لايف</string>
    <string name="all_teams">كل الفرق</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="show_style">طريقة العرض :</string>
    <string name="list">قائمة</string>
    <string name="grid">شبكة</string>
    <string name="search_by_team_name">البحث بإسم الفريق</string>
    <string name="sort">الترتيب</string>
    <string name="back">رجوع</string>
    <string name="news_source">مصدر الخبر</string>
    <string name="share">شارك</string>
    <string name="read_also">إقرأ أيضا</string>
    <string name="createddate">تاريخ النشر</string>
    <string name="createddatevalue">12 يوليو, 2019</string>
    <string name="sharemessage">لقد جربت التطبيق وهو رائع جداً أنا أوصيك به</string>
    <string name="installmessenger">يرجى تثبيت تطبيق Facebook Messenger</string>
    <string name="search_by_leagues_name">البحث باسم البطولة</string>
    <string name="team_sort">ت</string>
    <string name="teamname">الفريق</string>
    <string name="played">لعب</string>
    <string name="won">ف</string>
    <string name="drew">ت</string>
    <string name="loser">خ</string>
    <string name="goals">أهداف</string>
    <string name="points">نقاط</string>
    <string name="menu_league_sort">ترتيب البطولات</string>
    <string name="country">الدولة</string>
    <string name="add_favorite">أضف للمفضلة</string>
    <string name="matches">المباريات</string>
    <string name="players">اللاعبون</string>
    <string name="player">اللاعب</string>
    <string name="Pelanties">ضربات الجزاء</string>
    <string name="playergoals">الأهداف</string>
    <string name="details">التفاصيل</string>
    <string name="league">البطولة</string>
    <string name="tour">الجولة</string>
    <string name="displayground">ملعب المباراة</string>
    <string name="channel">القناة الناقلة</string>
    <string name="voice_commentator">المعلق</string>
    <string name="match_time">وقت المباراة</string>
    <string name="match_date">تاريخ المباراة</string>
    <string name="recorded">مسجل</string>
    <string name="api_key">nFMbvRWtYhwl4uCF8zQD7NlvvAbnytrXyR0fn9mcQck</string>
    <string name="api_username">alsVS23$!@,m88sL20</string>
    <string name="api_password">029!@$%HHSAaacba</string>
    <string name="content_type">application/x-www-form-urlencoded</string>
    <string name="base_url">http://alastora.foryou.ps/alastora/public/api/v1/</string>
    <string name="favorites_details">أنقر لإختيار فريقك المفضل والفرق التي تود متابعتها ليصلك كل جديد.</string>
    <string name="goalshisteam">أهداف في مرماه</string>
    <string name="true_goals">ضربات جزاء ناجحة</string>
    <string name="false_goals">ضربات جزاء ضائعة</string>
    <string name="yellow_cards">الكروت الصفراء</string>
    <string name="red_cards">الكروت الحمراء</string>
    <string name="empty_list">لا يوجد بيانات</string>
    <string name="no_internet">انقطع الاتصال بالانترنت</string>
    <string name="error">يرجى المحاولة في وقت لاحق</string>
    <string name="remaining">متبقي</string>
    <string name="days">أيام</string>
    <string name="hours">ساعات</string>
    <string name="match">مباراة</string>
    <string name="vs">و</string>
    <string name="matchgoals">أهداف المباراة</string>
    <string name="teamsorting">ترتيب فرق</string>
    <string name="years">عام</string>
    <string name="favorite">تم التفضيل</string>
    <string name="match_live">فيدبو البث المباشر للمباراة</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="teams">الفِرَق</string>
    <string name="search_for_t_p_l">البحث عن الفرق, اللاعبون, البطولات</string>
    <string name="sort_title">ت</string>
    <string name="elapsed">منقضي</string>
    <string name="rami_main_banner">ca-app-pub-8790840261202157/4714818287</string>
    <string name="fragment_notification_banner">ca-app-pub-8790840261202157/1298317455</string>
    <string name="fragment_favorite_banner">ca-app-pub-8790840261202157/7472843560</string>
    <string name="fragment_scorers_banner">ca-app-pub-8790840261202157/1165745078</string>
    <string name="fragment_leagues_banner">ca-app-pub-8790840261202157/4711056650</string>
    <string name="fragment_news_banner">ca-app-pub-8790840261202157/2001025038</string>
    <string name="fragment_league_details_banner">ca-app-pub-8790840261202157/3888821773</string>
    <string name="fragment_match_details_banner">ca-app-pub-8790840261202157/6219471644</string>
    <string name="fragment_news_details_banner">ca-app-pub-8790840261202157/7061780029</string>
    <string name="fragment_player_details_banner">ca-app-pub-8790840261202157/7921056810</string>
    <string name="fragment_search_banner">ca-app-pub-8790840261202157/6034928376</string>
    <string name="fragment_team_details_banner">ca-app-pub-8790840261202157/9591030002</string>
    <string name="fragment_participating_team_banner">ca-app-pub-8790840261202157/6550644130</string>
    <string name="main_fragment_inter">ca-app-pub-8790840261202157/3763988254</string>
    <string name="fragment_details_match_details_inter">ca-app-pub-8790840261202157/5229823607</string>
    <string name="fragment_news_details_inter">ca-app-pub-8790840261202157/1547220150</string>
    <string name="fragment_latest_news_inter">ca-app-pub-8790840261202157/8594353542</string>
    <string name="fragment_league_scorers_inter">ca-app-pub-8790840261202157/9368379166</string>
    <string name="fragment_leagues_inter">ca-app-pub-8790840261202157/2384168416</string>
    <string name="fragment_Match_goals_videos_inter">ca-app-pub-8790840261202157/4906389977</string>
    <string name="fragment_match_scorers_inter">ca-app-pub-8790840261202157/7253351713</string>
    <string name="fragment_notification_inter">ca-app-pub-8790840261202157/9176807473</string>
    <string name="fragment_scorers_inter">ca-app-pub-8790840261202157/9974173387</string>
    <string name="fragment_search_inter">ca-app-pub-8790840261202157/2095683362</string>
    <string name="fragment_sort_participating_teams_inter">ca-app-pub-8790840261202157/7156438352</string>
    <string name="fragment_team_latest_news_inter">ca-app-pub-8790840261202157/4338703329</string>
    <string name="fragment_team_players_inter">ca-app-pub-8790840261202157/1712539989</string>
    <string name="fragment_today_matches_inter">ca-app-pub-8790840261202157/6773294970</string>
    <string name="fragment_tomorrow_matches_inter">ca-app-pub-8790840261202157/5268641619</string>
    <string name="fragment_yesterday_inter">ca-app-pub-8790840261202157/9016314933</string>
    <!--Start Test Ads-->
    <!--<string name="rami_main_banner">ca-app-pub-3940256099942544/6300978111</string>
    <string name="fragment_notification_banner">ca-app-pub-3940256099942544/6300978111</string>
    <string name="fragment_favorite_banner">ca-app-pub-3940256099942544/6300978111</string>
    <string name="fragment_scorers_banner">ca-app-pub-3940256099942544/6300978111</string>
    <string name="fragment_leagues_banner">ca-app-pub-3940256099942544/6300978111</string>
    <string name="fragment_news_banner">ca-app-pub-3940256099942544/6300978111</string>
    <string name="fragment_league_details_banner">ca-app-pub-3940256099942544/6300978111</string>
    <string name="fragment_match_details_banner">ca-app-pub-3940256099942544/6300978111</string>
    <string name="fragment_news_details_banner">ca-app-pub-3940256099942544/6300978111</string>
    <string name="fragment_player_details_banner">ca-app-pub-3940256099942544/6300978111</string>
    <string name="fragment_search_banner">ca-app-pub-3940256099942544/6300978111</string>
    <string name="fragment_team_details_banner">ca-app-pub-3940256099942544/6300978111</string>
    <string name="fragment_participating_team_banner">ca-app-pub-3940256099942544/6300978111</string>
    <string name="main_fragment_inter">ca-app-pub-3940256099942544/1033173712</string>
    <string name="fragment_details_match_details_inter">ca-app-pub-3940256099942544/1033173712</string>
    <string name="fragment_news_details_inter">ca-app-pub-3940256099942544/1033173712</string>
    <string name="fragment_latest_news_inter">ca-app-pub-3940256099942544/1033173712</string>
    <string name="fragment_league_scorers_inter">ca-app-pub-3940256099942544/1033173712</string>
    <string name="fragment_leagues_inter">ca-app-pub-3940256099942544/1033173712</string>
    <string name="fragment_Match_goals_videos_inter">ca-app-pub-3940256099942544/1033173712</string>
    <string name="fragment_match_scorers_inter">ca-app-pub-3940256099942544/1033173712</string>
    <string name="fragment_notification_inter">ca-app-pub-3940256099942544/1033173712</string>
    <string name="fragment_scorers_inter">ca-app-pub-3940256099942544/1033173712</string>
    <string name="fragment_search_inter">ca-app-pub-3940256099942544/1033173712</string>
    <string name="fragment_sort_participating_teams_inter">ca-app-pub-3940256099942544/1033173712</string>
    <string name="fragment_team_latest_news_inter">ca-app-pub-3940256099942544/1033173712</string>
    <string name="fragment_team_players_inter">ca-app-pub-3940256099942544/1033173712</string>
    <string name="fragment_today_matches_inter">ca-app-pub-3940256099942544/1033173712</string>
    <string name="fragment_tomorrow_matches_inter">ca-app-pub-3940256099942544/1033173712</string>
    <string name="fragment_yesterday_inter">ca-app-pub-3940256099942544/1033173712</string>-->
    <!--End Test Ads-->
</resources>
