<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_main">

    <fragment
        android:id="@+id/nav_main"
        android:name="com.ramyhd.ramyalastora.RamiFragments.MainFragment"
        android:label="@string/menu_main"
        tools:layout="@layout/fragment_main" />

    <fragment
        android:id="@+id/nav_notification"
        android:name="com.ramyhd.ramyalastora.RamiFragments.NotificationFragment"
        android:label="@string/menu_notification"
        tools:layout="@layout/fragment_notification" />

    <fragment
        android:id="@+id/nav_favorite"
        android:name="com.ramyhd.ramyalastora.RamiFragments.FavoriteFragment"
        android:label="@string/menu_favotire"
        tools:layout="@layout/fragment_favorite" />

    <fragment
        android:id="@+id/nav_scorer"
        android:name="com.ramyhd.ramyalastora.RamiFragments.ScorersFragment"
        android:label="@string/menu_scorer"
        tools:layout="@layout/fragment_scorers" />

    <fragment
        android:id="@+id/nav_league"
        android:name="com.ramyhd.ramyalastora.RamiFragments.LeaguesFragment"
        android:label="@string/menu_league"
        tools:layout="@layout/fragment_leagues" />

    <fragment
        android:id="@+id/nav_latest_news"
        android:name="com.ramyhd.ramyalastora.RamiFragments.LatestNewsFragment"
        android:label="@string/menu_latest_news"
        tools:layout="@layout/fragment_latest_news" />

    <fragment
        android:id="@+id/nav_setting"
        android:name="com.ramyhd.ramyalastora.RamiFragments.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>