<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/height50dp"
    android:id="@+id/clteamsort">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/custom_ripple">

        <com.ramyhd.ramyalastora.CustomViews.CustomBoldTextView
            android:id="@+id/teamsort"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/team_sort"
            android:textColor="@color/gray_dark"
            android:textSize="@dimen/text12sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.ramyhd.ramyalastora.CustomViews.CustomBoldTextView
            android:id="@+id/teamname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/teamname"
            android:textColor="@color/dark_green"
            android:textSize="@dimen/text12sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.02"
            app:layout_constraintStart_toEndOf="@+id/teamsortimage"
            app:layout_constraintTop_toTopOf="parent" />

        <com.ramyhd.ramyalastora.CustomViews.CustomBoldTextView
            android:id="@+id/played"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="10"
            android:textColor="@color/dark_green"
            android:textSize="@dimen/text12sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.47"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.ramyhd.ramyalastora.CustomViews.CustomBoldTextView
            android:id="@+id/stand1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/dark_green"
            android:textSize="@dimen/text12sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.46"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.ramyhd.ramyalastora.CustomViews.CustomBoldTextView
            android:id="@+id/won"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/won"
            android:textColor="@color/bluegreen"
            android:textSize="@dimen/text12sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.13"
            app:layout_constraintStart_toEndOf="@+id/stand1"
            app:layout_constraintTop_toTopOf="parent" />

        <com.ramyhd.ramyalastora.CustomViews.CustomBoldTextView
            android:id="@+id/drew"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/drew"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/text12sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.23"
            app:layout_constraintStart_toEndOf="@+id/stand1"
            app:layout_constraintTop_toTopOf="parent" />

        <com.ramyhd.ramyalastora.CustomViews.CustomBoldTextView
            android:id="@+id/loser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loser"
            android:textColor="@color/xred"
            android:textSize="@dimen/text12sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.33"
            app:layout_constraintStart_toEndOf="@+id/stand1"
            app:layout_constraintTop_toTopOf="parent" />

        <com.ramyhd.ramyalastora.CustomViews.CustomBoldTextView
            android:id="@+id/scored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="6"
            android:textColor="@color/dark_green"
            android:textSize="@dimen/text12sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.72"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.ramyhd.ramyalastora.CustomViews.CustomBoldTextView
            android:id="@+id/ownnet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="6"
            android:textColor="@color/dark_green"
            android:textSize="@dimen/text12sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.77"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.ramyhd.ramyalastora.CustomViews.CustomBoldTextView
            android:id="@+id/rest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="6"
            android:textColor="@color/dark_green"
            android:textSize="@dimen/text12sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.82"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.ramyhd.ramyalastora.CustomViews.CustomBoldTextView
            android:id="@+id/points"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:text="@string/points"
            android:textColor="@color/dark_green"
            android:textSize="@dimen/text12sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/teamsortimage"
            android:layout_width="@dimen/width20dp"
            android:layout_height="@dimen/height20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.13"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/team3" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>